--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			margin-bottom: 1rem;
 			color: black;
 			/*fonts*/
-			font-family: elza-narrow, sans-serif;
+			font-family: warnock-pro, serif;
 			font-weight: 400;
-			font-style: normal;
+			font-style: italic;
 			font-size: 2.4rem;
-			line-height: 2rem;
+			line-height: 2.6rem;
 		}
 
 
